ISPN-14680 Reuse server image as a base for all tests
* Use descriptive image names
* Use JDK 17 base image
* upgrade testcontainers to 1.17.6
* use Ryuk 0.4.0
* more compact logs
* use TCCL to load Nashorn ScriptUtils
* set jgroups.join.timeout=0 for coordinators